fix alignment and spacing

--- a/lesson12/scss/large.scss
+++ b/lesson12/scss/large.scss
@@ -56,11 +56,17 @@ $buttonpurp:  rgb(145, 145, 253);
 
         #weather {
             margin-left: 2em;
+            margin-bottom: 2em;
             padding: 10px;
+            margin-top: -5px;
         }//end weather group
         .tempInfo {
             padding: 10px;
         }
+    }
+    section:nth-child(odd) h2 {
+        grid-column: 2;
+        grid-row: 1;
     }
     section:nth-child(odd) img {
         grid-column: 2;
@@ -69,6 +75,10 @@ $buttonpurp:  rgb(145, 145, 253);
     section:nth-child(odd) .tempInfo {
         grid-column: 1;
         grid-row: 2;
+    }
+    section:nth-child(odd) #weather {
+        grid-column: 2;
+        grid-row: 3;
     }
     section:nth-child(even) img {
         grid-column: 1;
